# SpaceCadetPinball_rs

./: .gitignore  Cargo.toml  README.md  build.rs  gen_gource.bat
.github/workflows/: rust.yml
Doc/: ownership diagram rust.txt
shared/: stb.h  wrapper.c
src/: component_info.rs  control.rs  control_function.rs  debug_overlay.rs  embedded_data.rs  errors.rs  fullscrn.rs  gdrv.rs  group_data.rs  high_score.rs  imgui_sdl.rs  loader.rs  main.rs  maths.rs  message_code.rs  midi.rs  nudge.rs  options.rs  partman.rs  pb.rs  pinball_state.rs  proj.rs  render.rs  score.rs  sound.rs  t_ball.rs  t_blocker.rs  t_bumper.rs  t_circle.rs  t_collision_component.rs  t_demo.rs  t_drain.rs  t_edge_box.rs  t_edge_manager.rs  t_edge_segment.rs  t_flipper.rs  t_flipper_edge.rs  t_gate.rs  t_light.rs  t_light_group.rs  (+15 more)
src/context/: component_context.rs  draw_context.rs  mod.rs
src/state/: component_state.rs  control_state.rs  debug_state.rs  fullscrn_state.rs  high_score_state.rs  loader_state.rs  main_state.rs  mod.rs  options_state.rs  pb_game_state.rs  pinball_state.rs  render_state.rs  score_state.rs  sound_state.rs
src_og/SpaceCadetPinball/: EmbeddedData.cpp  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp  maths.cpp  winmain.cpp  winmain.h
