[package]
name = "SpaceCadetPinball_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dear-imgui-rs = "0.14.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
sdl2 = { version = "0.38.0", features = ["mixer", "use-vcpkg", "static-link"] }
bytemuck = "1.25.0"
thiserror = "2.0.18"
rand = "0.10.1"
anyhow = { version = "1.0.103", features = ["backtrace"]}
log = "0.4.32"

[build-dependencies]
bindgen = "0.71.0"
cc = "1.2.65"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"

# [lints.clippy]
# pedantic = "warn"
